--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1544,7 +1544,7 @@
       },
       "source": [
         "#### Check node labels.\n",
-        "###### The seizure and baseline files should have the equivalent number of nodes. If this is not the case, the code below removes the extra nodes."
+        "###### The seizure and baseline files should have the equivalent nodes. If this is not the case, the code below removes the extra nodes."
       ]
     },
     {
@@ -1559,39 +1559,28 @@
       },
       "outputs": [],
       "source": [
-        "# TODO: The code below is not redundant, double check for each patient and create a redundant version\n",
-        "\n",
         "nodes_seizure = list(eeg_seizure.axes.region)\n",
         "nodes_baseline = list(eeg_baseline.axes.region)\n",
         "\n",
-        "nodes=[]\n",
-        "missing_node_ids=[]\n",
-        "extra_nodes_in = None\n",
+        "montage_overlap = list(set(nodes_seizure) & set(nodes_baseline))\n",
         "\n",
-        "if nodes_seizure==nodes_baseline: nodes = nodes_seizure\n",
-        "else:\n",
-        "    if len(nodes_seizure)>len(nodes_baseline): \n",
-        "        extra_nodes_in = \"seizure\"\n",
-        "        missing_nodes, nodes = [node for node in nodes_seizure if node not in nodes_baseline], nodes_seizure\n",
-        "        for missing in missing_nodes: \n",
-        "            print(f\"Node {missing} removed from seizure file as not present in baseline file.\")\n",
-        "            missing_node_ids.append(nodes.index(missing))\n",
-        "            del nodes[nodes.index(missing)]\n",
-        "            eeg_seizure.axes.region.remove(missing)\n",
-        "    \n",
-        "    elif len(nodes_seizure)<len(nodes_baseline): \n",
-        "        extra_nodes_in = \"baseline\"\n",
-        "        missing_nodes, nodes = [node for node in nodes_baseline if node not in nodes_seizure], nodes_baseline\n",
-        "        for missing in missing_nodes: \n",
-        "            for missing in missing_nodes: \n",
-        "                print(f\"Node {missing} removed from baseline file as not present in seizure file.\")\n",
-        "                missing_node_ids.append(nodes.index(missing))\n",
-        "                del nodes[nodes.index(missing)]\n",
-        "                eeg_baseline.axes.region.remove(missing)\n",
+        "extra_in_baseline = [ch for ch in nodes_baseline if ch not in montage_overlap]\n",
+        "extra_in_seizure = [ch for ch in nodes_seizure if ch not in montage_overlap]\n",
         "\n",
-        "print(\"\\nFiles now have the same nodes:\", nodes_seizure==nodes_baseline)\n",
-        "print(\"Number of nodes =\", len(nodes))\n",
-        "print(nodes)"
+        "if not extra_in_baseline and not extra_in_seizure: print(f\"\\nEEG channels (nodes) match between the seizure and baseline recordings ({len(montage_overlap)} nodes).\")\n",
+        "\n",
+        "elif extra_in_baseline: \n",
+        "    print(f\"\\nExtra nodes in baseline recording ({len(nodes_baseline)} total): {extra_in_baseline}\")\n",
+        "    for chn in extra_in_baseline: eeg_baseline.axes.region.remove(chn)\n",
+        "\n",
+        "elif extra_in_seizure: \n",
+        "    print(f\"\\nExtra nodes in seizure recording ({len(nodes_seizure)} total): {extra_in_seizure}\")\n",
+        "    for chn in extra_in_seizure: eeg_seizure.axes.region.remove(chn)\n",
+        "\n",
+        "print(f\"Number of common nodes = {len(montage_overlap)}\")\n",
+        "print(montage_overlap)\n",
+        "\n",
+        "nodes = montage_overlap"
       ]
     },
     {
