--- a/notebooks/connectivity_matrices.ipynb
+++ b/notebooks/connectivity_matrices.ipynb
@@ -10,7 +10,7 @@
     "# from src.core import REc\n",
     "from src.data_legacy import band\n",
     "from src.connectivity import preprocess, connectivity_analysis, phaselock, phaselag, spectral_coherence, PEC, cross_correlation, PAC\n",
-    "from src.tools import exclude_from_sz_cm \n",
+    "from src.tools import exclude_node_from_cm\n",
     "from os import makedirs\n",
     "from joblib import Parallel, delayed"
    ]
@@ -612,11 +612,12 @@
     "elif method_code[method_idx] == \"PAC\":\n",
     "    cm._set(X = connectivity_analysis(epochs, PAC, dtail=True, fs=resampling))\n",
     "\n",
-    "if extra_nodes_in is not None:\n",
-    "    for m in missing_node_ids:\n",
-    "        print(\"Mismatched node index:\", m)\n",
-    "        if extra_nodes_in==\"seizure\":\n",
-    "            cm.X = exclude_from_sz_cm(cm.X, m)\n",
+    "reduced_sz_cms, reduced_base_cms = [],[]\n",
+    "\n",
+    "for m in extra_in_seizure: reduced_sz_cms = exclude_node_from_cm(cm.X[0:int(len(cm.X)/2)], nodes_seizure.index(m))\n",
+    "for m in extra_in_baseline: reduced_base_cms = exclude_node_from_cm(cm.X[int(len(cm.X)/2)::], nodes_baseline.index(m))\n",
+    "\n",
+    "cm.X = reduced_sz_cms+reduced_base_cms\n",
     "\n",
     "plt.figure(figsize=(5,5))\n",
     "plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
