--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1313,34 +1313,20 @@
       "source": [
         "from numpy import delete\n",
         "\n",
-        "def exclude_from_cm(cm, channel_id):\n",
-        "    \"\"\"Excludes a node from a connectivity matrix.\n",
-        "    Arguments:\n",
-        "        cm (numpy array): 2D matrix with connectivity measures between all node pairs\n",
-        "        channel_id (int or list): index of the node to be removed\n",
-        "    Returns the updated matrix.\n",
-        "    \"\"\"\n",
-        "    cm = delete(cm, channel_id, 0)\n",
-        "    cm = delete(cm, channel_id, 1)\n",
-        "    return cm\n",
-        "\n",
-        "def exclude_from_sz_cm(cm_list, channel_id):\n",
-        "    \"\"\"Excludes a node from connectivity matrices of seizure epochs.\n",
+        "def exclude_node_from_cm(cm_list, channel_id):\n",
+        "    \"\"\"Excludes a node from connectivity matrices of cm_list epochs.\n",
         "    Arguments:\n",
         "        cm_list (list of numpy arrays): list of connectivity matrices saved in the PREP file under X;\n",
-        "                                        First half of the matrices are from seizure epochs, second half form basleine epochs.\n",
+        "                                        First half of the matrices are from seizure epochs, second half form baseline epochs.\n",
         "        channel_id (int or list): index of the node to be removed\n",
         "    Returns the updated list of matrices.\n",
         "    \"\"\"\n",
-        "    result = []\n",
-        "    for i,cm in enumerate(cm_list):\n",
-        "      if i<(len(cm_list)/2):\n",
-        "        # Exclude the node only from seizure matrices, which are set as the first half in the list\n",
-        "        cm = exclude_from_cm(cm, channel_id)\n",
-        "        result.append(cm)\n",
-        "      else:\n",
-        "        result.append(cm)\n",
-        "    return result"
+        "    reduced_cms = []\n",
+        "    for cm in cm_list:\n",
+        "      cm = delete(cm, channel_id, 0)\n",
+        "      cm = delete(cm, channel_id, 1)\n",
+        "      reduced_cms.append(cm)\n",
+        "    return reduced_cms"
       ]
     },
     {
@@ -1873,13 +1859,13 @@
       },
       "outputs": [],
       "source": [
-        "cm = struct(x=array(x), y=array(y), i=array(i)) # initiating an object for storing a connecivity matrix with shape (x, y) and epoch indices\n",
+        "cm = struct(x=np.array(x), y=np.array(y), i=np.array(i)) # initiating an object for storing a connecivity matrix with shape (x, y) and epoch indices\n",
         "\n",
         "cm._set(nodes = nodes)\n",
         "\n",
         "epochs = fpp_seizure + fpp_baseline\n",
         "\n",
-        "if method_code[method_idx] == \"SC\":\n",
+        "if method_code[method_idx] == \"SC_\":\n",
         "    cm._set(X = connectivity_analysis(epochs, spectral_coherence, fs=resampling, imag=imag))\n",
         "\n",
         "elif method_code[method_idx] == \"PEC\": \n",
@@ -1899,11 +1885,12 @@
         "elif method_code[method_idx] == \"PAC\":\n",
         "    cm._set(X = connectivity_analysis(epochs, PAC, dtail=True, fs=resampling))\n",
         "\n",
-        "if extra_nodes_in is not None:\n",
-        "    for m in missing_node_ids:\n",
-        "        print(\"Mismatched node index:\", m)\n",
-        "        if extra_nodes_in==\"seizure\":\n",
-        "            cm.X = exclude_from_sz_cm(cm.X, m)\n",
+        "reduced_sz_cms, reduced_base_cms = [],[]\n",
+        "\n",
+        "for m in extra_in_seizure: reduced_sz_cms = exclude_node_from_cm(cm.X[0:int(len(cm.X)/2)], nodes_seizure.index(m))\n",
+        "for m in extra_in_baseline: reduced_base_cms = exclude_node_from_cm(cm.X[int(len(cm.X)/2)::], nodes_baseline.index(m))\n",
+        "\n",
+        "cm.X = reduced_sz_cms+reduced_base_cms\n",
         "\n",
         "plt.figure(figsize=(5,5))\n",
         "plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
