--- a/notebooks/connectivity_matrices.ipynb
+++ b/notebooks/connectivity_matrices.ipynb
@@ -312,8 +312,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Seizure file annotations:\\n\\n\", [note for note in eeg_seizure.notes])\n",
-    "print(\"\\nBaseline file annotations:\\n\\n\", [note for note in eeg_baseline.notes])"
+    "notes_seizure = [note for note in eeg_seizure.notes]\n",
+    "notes_baseline = [note for note in eeg_baseline.notes]\n",
+    "print(f\"\\nSeizure file annotations:\\n{notes_seizure}\")\n",
+    "print(f\"\\nBaseline file annotations:\\n{notes_baseline}\")\n",
+    "\n",
+    "sz_start_note, sz_end_note, base_center_note, base_end_note = 'EEG inicio', 'EEG fin', 'mitad-NS', 'NS-fin'\n",
+    "\n",
+    "if sz_start_note not in notes_seizure:\n",
+    "    altnote = [a for a in notes_seizure if sz_start_note in a]\n",
+    "    print(f\"{sz_start_note} not in seizure recording notes; alternative note found: {altnote}\")\n",
+    "    sz_start_note = altnote[0]\n",
+    "if sz_end_note not in notes_seizure:\n",
+    "    altnote = [a for a in notes_seizure if sz_end_note in a]\n",
+    "    print(f\"{sz_end_note} not in seizure recording notes; alternative note found: {altnote}\")\n",
+    "    sz_end_note = altnote[0]\n",
+    "if base_center_note not in notes_baseline:\n",
+    "    altnote = [a for a in notes_baseline if base_center_note in a]\n",
+    "    print(f\"{base_center_note} not in seizure recording notes; alternative note found: {altnote}\")\n",
+    "if base_end_note not in notes_baseline:\n",
+    "    altnote = [a for a in notes_baseline if base_end_note in a]\n",
+    "    print(f\"{base_end_note} not in seizure recording notes; alternative note found: {altnote}\")"
    ]
   },
   {
@@ -358,11 +377,11 @@
     "\n",
     "if not extra_in_baseline and not extra_in_seizure: print(f\"\\nEEG channels (nodes) match between the seizure and baseline recordings ({len(montage_overlap)} nodes).\")\n",
     "\n",
-    "elif extra_in_baseline: \n",
+    "if extra_in_baseline: \n",
     "    print(f\"\\nExtra nodes in baseline recording ({len(nodes_baseline)} total): {extra_in_baseline}\")\n",
     "    for chn in extra_in_baseline: eeg_baseline.axes.region.remove(chn)\n",
     "\n",
-    "elif extra_in_seizure: \n",
+    "if extra_in_seizure: \n",
     "    print(f\"\\nExtra nodes in seizure recording ({len(nodes_seizure)} total): {extra_in_seizure}\")\n",
     "    for chn in extra_in_seizure: eeg_seizure.axes.region.remove(chn)\n",
     "\n",
@@ -418,12 +437,12 @@
    "outputs": [],
    "source": [
     "SET(eeg_seizure, _as='N')                      # N - baseline (non-seizure)\n",
-    "SET(eeg_seizure, 'EEG inicio', 'W')            # W - WOI\n",
-    "SET(eeg_seizure, 'EEG fin', 'S', epoch.END)    # S - seizure\n",
+    "SET(eeg_seizure, sz_start_note, 'W')            # W - WOI\n",
+    "SET(eeg_seizure, sz_end_note, 'S', epoch.END)    # S - seizure\n",
     "\n",
     "SET(eeg_baseline, _as='N')\n",
-    "SET(eeg_baseline, 'mitad-NS', 'W')            # W - middle point\n",
-    "SET(eeg_baseline, 'NS-fin', 'S', epoch.END)    # S - terminal point (end of recording)"
+    "SET(eeg_baseline, base_center_note, 'W')            # W - middle point\n",
+    "SET(eeg_baseline, base_end_note, 'S', epoch.END)    # S - terminal point (end of recording)"
    ]
   },
   {
@@ -461,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "units = int((eeg_seizure.notes['EEG fin'][0].time - eeg_seizure.notes['EEG inicio'][0].time)*(span/step))\n",
+    "units = int((eeg_seizure.notes[sz_start_note][0].time - eeg_seizure.notes[sz_end_note][0].time)*(span/step))\n",
     "print(\"Seizure length =\", units/2, \"s\")"
    ]
   },
