--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1299,7 +1299,7 @@
         "    Returns:\n",
         "        list: List of connectivity matrices for all epochs.\n",
         "    \"\"\"\n",
-        "    print('Connectivity Analysis: '+str(method).split()[1])\n",
+        "    print('Connectivity measure: '+str(method).split()[1])\n",
         "    parallelize = Parallel(n_jobs=-1)(delayed(analyze_epoch)(e, method, dtail, **opts) for e in epochs)\n",
         "    cm = [mat for mat in parallelize]\n",
         "    return cm"
@@ -1555,11 +1555,11 @@
         "\n",
         "if not extra_in_baseline and not extra_in_seizure: print(f\"\\nEEG channels (nodes) match between the seizure and baseline recordings ({len(montage_overlap)} nodes).\")\n",
         "\n",
-        "elif extra_in_baseline: \n",
+        "if extra_in_baseline: \n",
         "    print(f\"\\nExtra nodes in baseline recording ({len(nodes_baseline)} total): {extra_in_baseline}\")\n",
         "    for chn in extra_in_baseline: eeg_baseline.axes.region.remove(chn)\n",
         "\n",
-        "elif extra_in_seizure: \n",
+        "if extra_in_seizure: \n",
         "    print(f\"\\nExtra nodes in seizure recording ({len(nodes_seizure)} total): {extra_in_seizure}\")\n",
         "    for chn in extra_in_seizure: eeg_seizure.axes.region.remove(chn)\n",
         "\n",
@@ -1592,18 +1592,19 @@
       },
       "outputs": [],
       "source": [
-        "if eeg_baseline.fs == 50 and eeg_seizure.fs == 50: \n",
-        "    # this condition was used for patient data with misfiled sampling frequency    \n",
-        "    print(\"WARNING: The sampling frequency may have been incorrectly filed... Overwrite with data from subsmeta.xlsx table for now; check with Ale later\")\n",
-        "    eeg_seizure._set(fs = 500)\n",
-        "    eeg_baseline._set(fs = 500)\n",
+        "# original sampling from subsmeta.xlsx table\n",
+        "subject_fs = {'VBM':250, 'JQN':500, 'BGL':500, 'HDW':500, 'ASJ':500, 'SDA':500, 'MGM':500, 'MSF':500, 'PTD':500, 'RGE':500, 'SRM':500, 'CRD':500, 'CRF':500, 'GTA':500, 'HAF':500, 'VML':1024, 'MRI':500, 'USA':512, 'BRM':512, 'MMM':2048, 'VCG':500}\n",
+        "    \n",
+        "print(\"WARNING: The sampling frequency incorrectly filed using pyEDFlib... Overwriting with original sampling.\")\n",
+        "eeg_seizure._set(fs = subject_fs[subject_id])\n",
+        "eeg_baseline._set(fs = subject_fs[subject_id])\n",
         "\n",
         "print(\"Sampling freqency (seizure file) =\", eeg_seizure.fs)\n",
         "print(\"Sampling freqency (baseline file) =\", eeg_baseline.fs)\n",
         "\n",
-        "fs_min = eeg_seizure.fs\n",
-        " \n",
-        "# set the resampled frequency to 500 Hz if sampling is not already 512 Hz\n",
+        "fs_min = min(eeg_seizure.fs, eeg_baseline.fs)\n",
+        "\n",
+        "# set the desired resampled frequency to 500 Hz if sampling is not already 512 Hz\n",
         "resampling = 512 if fs_min==512 else 500"
       ]
     },
