--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1492,8 +1492,27 @@
       },
       "outputs": [],
       "source": [
-        "print(\"Seizure file annotations:\\n\\n\", [note for note in eeg_seizure.notes])\n",
-        "print(\"\\nBaseline file annotations:\\n\\n\", [note for note in eeg_baseline.notes])"
+        "notes_seizure = [note for note in eeg_seizure.notes]\n",
+        "notes_baseline = [note for note in eeg_baseline.notes]\n",
+        "print(f\"\\nSeizure file annotations:\\n{notes_seizure}\")\n",
+        "print(f\"\\nBaseline file annotations:\\n{notes_baseline}\")\n",
+        "\n",
+        "sz_start_note, sz_end_note, base_center_note, base_end_note = 'EEG inicio', 'EEG fin', 'mitad-NS', 'NS-fin'\n",
+        "\n",
+        "if sz_start_note not in notes_seizure:\n",
+        "    altnote = [a for a in notes_seizure if sz_start_note in a]\n",
+        "    print(f\"{sz_start_note} not in seizure recording notes; alternative note found: {altnote}\")\n",
+        "    sz_start_note = altnote[0]\n",
+        "if sz_end_note not in notes_seizure:\n",
+        "    altnote = [a for a in notes_seizure if sz_end_note in a]\n",
+        "    print(f\"{sz_end_note} not in seizure recording notes; alternative note found: {altnote}\")\n",
+        "    sz_end_note = altnote[0]\n",
+        "if base_center_note not in notes_baseline:\n",
+        "    altnote = [a for a in notes_baseline if base_center_note in a]\n",
+        "    print(f\"{base_center_note} not in seizure recording notes; alternative note found: {altnote}\")\n",
+        "if base_end_note not in notes_baseline:\n",
+        "    altnote = [a for a in notes_baseline if base_end_note in a]\n",
+        "    print(f\"{base_end_note} not in seizure recording notes; alternative note found: {altnote}\")"
       ]
     },
     {
@@ -1632,8 +1651,6 @@
       },
       "outputs": [],
       "source": [
-        "sz_start_note, sz_end_note, base_center_note, base_end_note = 'EEG inicio', 'EEG fin', 'mitad-NS', 'NS-fin'\n",
-        "\n",
         "SET(eeg_seizure, _as='N')                      # N - baseline (non-seizure)\n",
         "SET(eeg_seizure, sz_start_note, 'W')            # W - WOI\n",
         "SET(eeg_seizure, sz_end_note, 'S', epoch.END)    # S - seizure\n",
