--- a/notebooks/cvs_game.ipynb
+++ b/notebooks/cvs_game.ipynb
@@ -299,7 +299,7 @@
     "    def shuffle(hand):\n",
     "        lo, hi = min(hand.deck), max(hand.deck)\n",
     "        hand.cards = sorted(sample(hand.deck, hand.n_in_hand)) # draw a number of random cards from the deck\n",
-    "    def check(scores): return (1+scores.real)/(1+scores.best)\n",
+    "    def check(scores): return 1+scores.real\n",
     "    def play(god, *among):\n",
     "        best, other = max(god.cards), []\n",
     "        for player in among: other+=player.cards\n",
@@ -336,8 +336,6 @@
     "            if best==card: by.append(player)\n",
     "            if best <card: best=card; by=[player]\n",
     "        return by\n",
-    "    winners = resolve([(god, god.play(*[other for other in game if other is not god])) for god in game])\n",
-    "    for player in winners: player.best += 1\n",
     "    winners = resolve([(player, player.card()) for player in game])\n",
     "    for player in winners: player.real += 1\n",
     "    for player in game: player.score.append(player.check())"
@@ -415,9 +413,8 @@
     "\n",
     "    game = [Player(strategy, deck_remapped[p], p) for p in players]\n",
     "\n",
-    "    total_cards = 10\n",
-    "    for n_cards in range(2,total_cards+1):\n",
-    "\n",
+    "    for j in range(10):\n",
+    "        n_cards = 24\n",
     "        for player in game: player.n_in_hand = n_cards\n",
     "        play(*game)\n",
     "\n",
@@ -440,16 +437,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for pair in test:\n",
-    "    print(sum(test[pair]))"
+    "from pickle import load, dump\n",
+    "\n",
+    "x=dump(test, open(main_folder + \"test_preseizure1_sub1.p\", \"wb\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
