--- a/notebooks/gcolab_cvs_game.ipynb
+++ b/notebooks/gcolab_cvs_game.ipynb
@@ -324,7 +324,7 @@
         "path_res = main_folder + \"cvs_pairs/\"\n",
         "\n",
         "path_deck = main_folder + \"decks/\"\n",
-        "path_scores = main_folder + \"/game_scores\"\n",
+        "path_scores = main_folder + \"game_scores/\"\n",
         "\n",
         "makedirs(path_deck, exist_ok=True)\n",
         "makedirs(path_scores, exist_ok=True)\n",
