--- a/notebooks/gcolab_cvs_game.ipynb
+++ b/notebooks/gcolab_cvs_game.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "KC5FnA4gR3-H"
       },
@@ -201,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -293,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "cCcLUcXQR3-J"
       },
@@ -307,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -317,10 +317,12 @@
       },
       "outputs": [],
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')\n",
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/gdrive')\n",
+        "# main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n",
         "\n",
-        "main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n",
+        "main_folder = \"/home/kivi/gdrive/epigame-folder/\"\n",
+        "\n",
         "path_res = main_folder + \"cvs_pairs/\"\n",
         "\n",
         "path_deck = main_folder + \"decks/\"\n",
@@ -393,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -403,8 +405,8 @@
       },
       "outputs": [],
       "source": [
-        "# sub = 1 # GO\n",
-        "sub = 3 # BO"
+        "sub = 1 # GO\n",
+        "# sub = 3 # BO"
       ]
     },
     {
@@ -440,18 +442,18 @@
         "\n",
         "        player_deck[node_pair]+=cards\n",
         "\n",
-        "dump(open(main_folder + path_deck + f\"player_deck_{woi}_sub{sub}.p\", \"wb\"))"
+        "dump(player_deck, open(main_folder + path_deck + f\"player_deck_{woi}_sub{sub}.p\", \"wb\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "2GTO1lA7iE9J"
       },
       "outputs": [],
       "source": [
-        "player_deck = load(open(path_deck + f\"player_deck_{woi}_sub{sub}.p\", \"rb\"))"
+        "player_deck = load(open(main_folder + f\"player_deck_{woi}_sub{sub}.p\", \"rb\"))"
       ]
     },
     {
