--- a/notebooks/gcolab_cvs_game.ipynb
+++ b/notebooks/gcolab_cvs_game.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "KC5FnA4gR3-H"
       },
@@ -201,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -293,21 +293,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "cCcLUcXQR3-J"
       },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n",
         "from pickle import load, dump\n",
         "from os import makedirs"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -395,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -405,8 +404,13 @@
       },
       "outputs": [],
       "source": [
-        "sub = 1 # GO\n",
-        "# sub = 3 # BO"
+        "sub = 2 # GO\n",
+        "# sub = 3 # BO\n",
+        "\n",
+        "strategy = mm_choice\n",
+        "strategy_ext = \"mm\" \n",
+        "\n",
+        "rounds, turns, n_cards = 100, 10, 24"
       ]
     },
     {
@@ -447,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "2GTO1lA7iE9J"
       },
@@ -481,9 +485,6 @@
       },
       "outputs": [],
       "source": [
-        "strategy = mm_choice\n",
-        "strategy_ext = \"mm\" \n",
-        "\n",
         "test = {p:[] for p in players}\n",
         "\n",
         "rounds, turns = 100, 10\n",
@@ -550,14 +551,144 @@
         "nonresection_score, resection_score = 0,0\n",
         "\n",
         "for k,v in sorted_players.items():\n",
-        "  if k[0] in resection or k[1] in resection:\n",
+        "  if nodes[k[0]] in resection or nodes[k[1]] in resection:\n",
         "    resection_score += sum(v)\n",
-        "  if k[0] not in resection or k[1] not in resection:\n",
+        "  if nodes[k[0]] not in resection or nodes[k[1]] not in resection:\n",
         "    nonresection_score += sum(v)\n",
         "\n",
         "print(\"Resection score:\", resection_score/len(resection))\n",
         "print(\"Non-resection score:\", nonresection_score/(len(nodes)-len(resection)))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "subs = [11] # BO\n",
+        "\n",
+        "strategy = mm_choice\n",
+        "strategy_ext = \"mm\" \n",
+        "\n",
+        "rounds, turns, n_cards = 100, 10, 24\n",
+        "\n",
+        "strategies = [mm_choice, mx_choice, av_choice, rn_choice]\n",
+        "strategy_ext = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
+        "\n",
+        "for sub in subs:\n",
+        "    print(\"\\nSubject:\")\n",
+        "    print(sub)\n",
+        "    nodes = NODES[str(sub)]\n",
+        "    resection = RESECTION[int(sub)]\n",
+        "    print(\"N_nodes =\", len(nodes), \";N_resection =\", len(resection))\n",
+        "\n",
+        "    for i,strat in enumerate(strategies):\n",
+        "        print(\"\\nStrategy:\")\n",
+        "        print(strategy_ext[i].upper())\n",
+        "        sorted_players = load(open(path_scores + f\"scores_{strategy_ext[i]}_{n_cards}cards_{rounds}rounds_{turns}turns_preseizure1_sub{sub}.p\", \"rb\"))\n",
+        "        \n",
+        "        nonresection_score, resection_score = 0,0\n",
+        "\n",
+        "        for k,v in sorted_players.items():\n",
+        "            if nodes[k[0]] in resection or nodes[k[1]] in resection:\n",
+        "                resection_score += sum(v)\n",
+        "            if nodes[k[0]] not in resection or nodes[k[1]] not in resection:\n",
+        "                nonresection_score += sum(v)\n",
+        "\n",
+        "        print(\"Resection score (N_wins):\", resection_score)\n",
+        "        print(\"Non-resection score (N_wins):\", nonresection_score)\n",
+        "        print(\"Resection score (N_wins%N_nodes_res):\", resection_score/len(resection))\n",
+        "        print(\"Non-resection score (N_wins%N_nodes_nonres):\", nonresection_score/(len(nodes)-len(resection)))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "subs = [2,5,9,13,14,19] # GO\n",
+        "\n",
+        "strategy = mm_choice\n",
+        "strategy_ext = \"mm\" \n",
+        "\n",
+        "rounds, turns, n_cards = 100, 10, 24\n",
+        "\n",
+        "strategies = [mm_choice, mx_choice, av_choice, rn_choice]\n",
+        "strategy_ext = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
+        "\n",
+        "for sub in subs:\n",
+        "    print(\"\\nSubject:\")\n",
+        "    print(sub)\n",
+        "    nodes = NODES[str(sub)]\n",
+        "    resection = RESECTION[int(sub)]\n",
+        "    nonresection = [n for n in nodes if n not in resection]\n",
+        "    print(\"N_nodes =\", len(nodes), \";N_resection =\", len(resection))\n",
+        "    for i,strat in enumerate(strategies):\n",
+        "        print(\"\\nStrategy:\")\n",
+        "        print(strategy_ext[i].upper())\n",
+        "        sorted_players = load(open(path_scores + f\"scores_{strategy_ext[i]}_{n_cards}cards_{rounds}rounds_{turns}turns_preseizure1_sub{sub}.p\", \"rb\"))\n",
+        "        \n",
+        "        nonresection_score, resection_score = 0,0\n",
+        "\n",
+        "        for k,v in sorted_players.items():\n",
+        "            if (nodes[k[0]] in resection and nodes[k[1]] in resection): resection_score += sum(v)\n",
+        "            elif (nodes[k[0]] in nonresection and nodes[k[1]] in nonresection): nonresection_score += sum(v)\n",
+        "            elif (nodes[k[0]] in nonresection and nodes[k[1]] in resection) or (nodes[k[0]] in resection and nodes[k[1]] in nonresection): resection_score += sum(v);nonresection_score += sum(v)\n",
+        "\n",
+        "        print(\"Resection score (N_wins):\", resection_score)\n",
+        "        print(\"Non-resection score (N_wins):\", nonresection_score)\n",
+        "        print(\"Resection score (N_wins%N_nodes_res):\", resection_score/len(resection))\n",
+        "        print(\"Non-resection score (N_wins%N_nodes_nonresectiones):\", nonresection_score/(len(nodes)-len(resection)))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from random import sample\n",
+        "\n",
+        "for sub in subs:\n",
+        "    print(\"\\nSubject:\")\n",
+        "    print(sub)\n",
+        "    nodes = NODES[str(sub)]\n",
+        "    resection = RESECTION[int(sub)]\n",
+        "    print(\"N_nodes =\", len(nodes), \";N_resection =\", len(resection))\n",
+        "\n",
+        "    n_res = len(resection)\n",
+        "    n_min = 5\n",
+        "    print(\"10% of resection nodes =\", int(n_res*0.1))\n",
+        "    n_group = int(n_res*0.1) if int(n_res*0.1)>n_min else n_min\n",
+        "\n",
+        "    for i,strat in enumerate(strategies):\n",
+        "        print(\"\\nStrategy:\")\n",
+        "        print(strategy_ext[i].upper())\n",
+        "        sorted_players = load(open(path_scores + f\"scores_{strategy_ext[i]}_{n_cards}cards_{rounds}rounds_{turns}turns_preseizure1_sub{sub}.p\", \"rb\"))\n",
+        "\n",
+        "        nonresection_score, resection_score = 0,0\n",
+        "\n",
+        "        for j in range(100):\n",
+        "\n",
+        "            r = sample(resection, n_group)\n",
+        "            nonr = sample([n for n in nodes if n not in resection], n_group)\n",
+        "            for k,v in sorted_players.items():\n",
+        "                if (nodes[k[0]] in r and nodes[k[1]] in r): resection_score += sum(v)\n",
+        "                elif (nodes[k[0]] in nonr and nodes[k[1]] in nonr): nonresection_score += sum(v)\n",
+        "                elif (nodes[k[0]] in nonr and nodes[k[1]] in r) or (nodes[k[0]] in r and nodes[k[1]] in nonr): resection_score += sum(v);nonresection_score += sum(v)\n",
+        "\n",
+        "        print(\"Resection score (N_wins):\", resection_score)\n",
+        "        print(\"Non-resection score (N_wins):\", nonresection_score)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
