--- a/notebooks/matches.ipynb
+++ b/notebooks/matches.ipynb
@@ -100,7 +100,6 @@
    "source": [
     "import pandas as pd\n",
     "from pickle import load, dump\n",
-    "from os import makedirs\n",
     "import numpy as np\n",
     "from scipy.interpolate import interp1d"
    ]
@@ -121,9 +120,6 @@
     "\n",
     "path_deck = main_folder + \"decks/\"\n",
     "path_scores = main_folder + \"game_scores/\"\n",
-    "\n",
-    "makedirs(path_deck, exist_ok=True)\n",
-    "makedirs(path_scores, exist_ok=True)\n",
     "\n",
     "woi = \"preseizure1\""
    ]
@@ -892,7 +888,7 @@
     }
    ],
    "source": [
-    "subs = [2]#,5,9,13,14,19] # GO\n",
+    "subs = [2,9,19,5] # GO\n",
     "# subs = [11] # BO\n",
     "\n",
     "rounds, turns, n_cards = 100, 10, 24\n",
