--- a/notebooks/check_winners.ipynb
+++ b/notebooks/check_winners.ipynb
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -509,7 +509,6 @@
       "source": [
         "from sklearn.metrics import roc_auc_score, roc_curve\n",
         "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
         "\n",
         "# ROC Function\n",
         "def plot_roc_curve(Y_test, model_probs):\n",
@@ -537,8 +536,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Plot ROC-AUC and AUPRC (APS) for node classification as resection or non-resection. Plot prettified using https://github.com/1danielr/rocauc-auprc/blob/main/experiments.ipynb"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -570,26 +577,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Subject:\n",
-            "13\n",
-            "Surgical success\n",
-            "N_nodes = 89 ;N_resection = 38\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "\n",
-        "subs = list(range(13,22))\n",
+        "subs = list(range(1,22))\n",
         "bad_subs = [3,6,10,11,12,17,18]\n",
         "good_subs = [s for s in subs if s not in bad_subs]\n",
         "\n",
@@ -648,8 +643,10 @@
         "            # y_pred = log_regression.predict(X_test)\n",
         "            # print(classification_report(y_test, y_pred))\n",
         "            try:\n",
+        "                random_probs = [0 for _ in range(len(y_test))]\n",
+        "                aps_random = average_precision_score(y_test, random_probs) # basleine aps\n",
         "                aps = average_precision_score(y_test, y_pred_proba)\n",
-        "                if aps > best_aps: \n",
+        "                if aps-aps_random > best_aps: # difference from baseline aps\n",
         "                    best_aps = aps\n",
         "                    best_cm = cm\n",
         "                    best_strategy = strategy_ext[i].upper()\n",
@@ -657,7 +654,7 @@
         "                    best_y_pred_proba = y_pred_proba\n",
         "                \n",
         "            except:\n",
-        "                print(\"Error occurred.\")\n",
+        "                pass\n",
         "    try:\n",
         "        print(\"\\nConnectivity measure:\", best_cm)\n",
         "        print(\"\\nStrategy:\", best_strategy)\n",
