--- a/notebooks/rd_groups_match.ipynb
+++ b/notebooks/rd_groups_match.ipynb
@@ -220,13 +220,7 @@
    "source": [
     "from joblib import Parallel, delayed\n",
     "\n",
-    "def check_strategy(Subject, Outcome, ps_outcome, CM, R, Group_size, Strategy, strat, Sigmas, N_winners, Mean_overlap_ratio):\n",
-    "    Subject.append(sub)\n",
-    "    Outcome.append(ps_outcome)\n",
-    "    R.append(r)\n",
-    "    Group_size.append(group_size)\n",
-    "    CM.append(cm)\n",
-    "    Strategy.append(strat)\n",
+    "def check_strategy(strat, sigmas):\n",
     "\n",
     "    sorted_players = load(open(path_scores + f\"scores_{cm}_{strat}_{n_cards}cards_{rounds}rounds_{turns}turns_{woi}_sub{sub}.p\", \"rb\"))\n",
     "\n",
@@ -237,19 +231,14 @@
     "    mean = np.average(list(group_scores.values()))\n",
     "    std = np.std(list(group_scores.values()))\n",
     "\n",
-    "    sigmas = 2\n",
-    "    Sigmas.append(sigmas)\n",
-    "\n",
     "    thresh = mean+(std*sigmas)\n",
     "    winners_above_thresh = [players for players in group_scores if group_scores[players] >= thresh]\n",
     "    N_winners_above_thresh = len(winners_above_thresh)\n",
     "\n",
-    "    N_winners.append(N_winners_above_thresh)\n",
-    "\n",
     "    resection_match_winners = [len(resection_match[players]) for players in winners_above_thresh]\n",
     "    resection_match_losers = [len(resection_match[players]) for players in resection_match if players not in winners_above_thresh]\n",
     "    winner_loser_ratio = np.mean(resection_match_winners)/np.mean(resection_match_losers)\n",
-    "    Mean_overlap_ratio.append(winner_loser_ratio)"
+    "    return strat, N_winners_above_thresh, winner_loser_ratio"
    ]
   },
   {
@@ -285,11 +274,26 @@
     "    group_size = int(len(nodes)*r) if int(len(nodes)*r) < len(resection) else len(resection) \n",
     "    print(f\"Number of players per group = {group_size}\")\n",
     "    rd_groups = [sample(nodes, group_size) for i in range(1000)]\n",
-    "\n",
+    "    \n",
+    "    sigmas = 2\n",
+    "    \n",
     "    for cm in conn_measures:\n",
-    "        parallelize = Parallel(n_jobs=-1)(delayed(check_strategy)(Subject, Outcome, ps_outcome, CM, R, Group_size, Strategy, Sigmas, N_winners, Mean_overlap_ratio)for strat in strategies)\n",
+    "        parallelize = Parallel(n_jobs=-1)(delayed(check_strategy)(strat, sigmas)for strat in strategies)\n",
+    "        base = [p for p in parallelize]\n",
     "\n",
-    "surgical_outcome_prediciton_data = {\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"R\":R, \"Group_size\":Group_size, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio}"
+    "        for x in base:\n",
+    "            Subject.append(sub)\n",
+    "            Outcome.append(ps_outcome)\n",
+    "            R.append(r)\n",
+    "            Group_size.append(group_size)\n",
+    "            CM.append(cm)\n",
+    "            Strategy.append(x[0])\n",
+    "            Sigmas.append(sigmas)\n",
+    "            N_winners.append(x[1])\n",
+    "            Mean_overlap_ratio.append(x[2])\n",
+    "\n",
+    "    surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"R\":R, \"Group_size\":Group_size, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio})\n",
+    "    surgical_outcome_prediciton_data.to_excel(main_folder+\"surgical_outcome_data.xlsx\")"
    ]
   },
   {
@@ -298,7 +302,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.to_excel(surgical_outcome_prediciton_data, main_folder+\"surgical_outcome_data.xlsx\")"
+    "surgical_outcome_prediciton_data.to_excel(main_folder+\"surgical_outcome_data.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import PrecisionRecallDisplay, RocCurveDisplay, roc_auc_score, average_precision_score\n",
+    "\n",
+    "# define the predictor variables and the response variable\n",
+    "X = data[[\"Mean_overlap_ratio\"]]\n",
+    "y = data[\"Outcome\"]\n",
+    "\n",
+    "# split the dataset into training (70%) and testing (30%) sets\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.3,random_state=0) \n",
+    "\n",
+    "# instantiate the model\n",
+    "log_regression = LogisticRegression()\n",
+    "\n",
+    "# fit the model using the training data\n",
+    "try:\n",
+    "    log_regression.fit(X_train,y_train)\n",
+    "\n",
+    "    # use model to predict probability that given y value is 1\n",
+    "    y_pred_proba = log_regression.predict_proba(X_test)[::,1]\n",
+    "    # y_pred = log_regression.predict(X_test)\n",
+    "    # print(classification_report(y_test, y_pred))\n",
+    "    random_probs = [0 for _ in range(len(y_test))]\n",
+    "    aps_random = average_precision_score(y_test, random_probs) # basleine aps\n",
+    "    aps = average_precision_score(y_test, y_pred_proba)\n",
+    "    auc = roc_auc_score(y_test, y_pred_proba)\n",
+    "except: pass"
    ]
   }
  ],
