--- a/notebooks/rd_groups_match.ipynb
+++ b/notebooks/rd_groups_match.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub = 3 # GO\n",
+    "sub = 6\n",
     "\n",
     "strategy_ext = \"mm\" \n",
     "\n",
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cm = \"PAC\"\n",
+    "cm = \"CC-(4,8)\"\n",
     "\n",
     "sorted_players = load(open(path_scores + f\"scores_{cm}_{strategy_ext}_{n_cards}cards_{rounds}rounds_{turns}turns_{woi}_sub{sub}.p\", \"rb\"))"
    ]
@@ -292,7 +292,7 @@
     "            N_winners.append(x[1])\n",
     "            Mean_overlap_ratio.append(x[2])\n",
     "\n",
-    "    surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"R\":R, \"Group_size\":Group_size, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio})\n",
+    "    surgical_outcome_prediciton_data = pd.DataFrame({\"Subject\":Subject, \"Outcome\":Outcome, \"CM\":CM, \"Strategy\":Strategy, \"R\":R, \"Group_size\":Group_size, \"Sigmas\":Sigmas, \"N_winners\":N_winners, \"Mean_overlap_ratio\":Mean_overlap_ratio})\n",
     "    surgical_outcome_prediciton_data.to_excel(main_folder+\"surgical_outcome_data.xlsx\")"
    ]
   },
@@ -311,33 +311,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "FONT_SIZE = 13\n",
+    "def prettify_plot(ax):\n",
+    "    ax.tick_params(axis='both', which='major', labelsize=FONT_SIZE)\n",
+    "    ax.legend(loc='best', prop={'size': FONT_SIZE})\n",
+    "    ax.grid(True)\n",
+    "\n",
+    "def roc_prettify_plot(ax, set_title=True):\n",
+    "    prettify_plot(ax)\n",
+    "    ax.set_xlabel(\"False Positive Rate\", fontsize=FONT_SIZE)\n",
+    "    ax.set_ylabel(\"True Positive Rate\", fontsize=FONT_SIZE)\n",
+    "    if set_title:\n",
+    "        ax.set_title(\"ROC-AUC\", fontsize=15)\n",
+    "\n",
+    "def prc_prettify_plot(ax, set_title=True):\n",
+    "    ax.set_ylim(-0.05, 1.05)\n",
+    "    prettify_plot(ax)\n",
+    "    ax.set_xlabel(\"Recall\", fontsize=FONT_SIZE)\n",
+    "    ax.set_ylabel(\"Precision\", fontsize=FONT_SIZE)\n",
+    "    if set_title:\n",
+    "        ax.set_title(\"AUPRC\", fontsize=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold, cross_validate, LeaveOneOut, cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import average_precision_score, roc_auc_score, make_scorer, accuracy_score, precision_score, recall_score, f1_score\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import PrecisionRecallDisplay, RocCurveDisplay, roc_auc_score, average_precision_score\n",
     "\n",
-    "# define the predictor variables and the response variable\n",
-    "X = data[[\"Mean_overlap_ratio\"]]\n",
-    "y = data[\"Outcome\"]\n",
+    "load_data = pd.read_excel(main_folder+\"surgical_outcome_data_3sigma.xlsx\", engine='openpyxl')\n",
     "\n",
-    "# split the dataset into training (70%) and testing (30%) sets\n",
-    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.3,random_state=0) \n",
+    "strategies = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
     "\n",
-    "# instantiate the model\n",
-    "log_regression = LogisticRegression()\n",
+    "load_data[\"Mean_overlap_ratio\"].fillna(0, inplace=True) # if 0 winners, nan is saved, so replace it with 0\n",
     "\n",
-    "# fit the model using the training data\n",
-    "try:\n",
-    "    log_regression.fit(X_train,y_train)\n",
+    "CM, Strategy, Accuracy, Precision, Recall, F1, AUROC, AUPRC, AUPRC_rd = [],[],[],[],[],[],[],[],[]\n",
     "\n",
-    "    # use model to predict probability that given y value is 1\n",
-    "    y_pred_proba = log_regression.predict_proba(X_test)[::,1]\n",
-    "    # y_pred = log_regression.predict(X_test)\n",
-    "    # print(classification_report(y_test, y_pred))\n",
-    "    random_probs = [0 for _ in range(len(y_test))]\n",
-    "    aps_random = average_precision_score(y_test, random_probs) # basleine aps\n",
-    "    aps = average_precision_score(y_test, y_pred_proba)\n",
-    "    auc = roc_auc_score(y_test, y_pred_proba)\n",
-    "except: pass"
+    "for cm in conn_measures:\n",
+    "\n",
+    "    for strategy in strategies:\n",
+    "        data = load_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy)\n",
+    "        # print(data.dtypes)\n",
+    "        # define the predictor variables and the response variable\n",
+    "        X = data[[\"Mean_overlap_ratio\"]]\n",
+    "        y = data[\"Outcome\"]\n",
+    "\n",
+    "        # scaler = MinMaxScaler()\n",
+    "        # X = scaler.fit_transform(X)\n",
+    "\n",
+    "        scoring = {'accuracy' : make_scorer(accuracy_score), \n",
+    "                'precision' : make_scorer(precision_score),\n",
+    "                'recall' : make_scorer(recall_score), \n",
+    "                'f1_score' : make_scorer(f1_score),\n",
+    "                'auc': make_scorer(roc_auc_score),\n",
+    "                'aps':make_scorer(average_precision_score)}\n",
+    "        \n",
+    "        kfold = StratifiedKFold(n_splits=7, shuffle=True, random_state=0)\n",
+    "        model = RandomForestClassifier(n_estimators=50) \n",
+    "        \n",
+    "        results = cross_validate(estimator=model,\n",
+    "                                X=X,\n",
+    "                                y=y,\n",
+    "                                cv=kfold,\n",
+    "                                n_jobs=-1,\n",
+    "                                scoring=scoring)\n",
+    "        \n",
+    "        X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.3,random_state=0) \n",
+    "        random_probs = [0 for _ in range(len(y_test))]\n",
+    "        aps_random = average_precision_score(y_test, random_probs) # baseline aps\n",
+    "\n",
+    "        CM.append(cm)\n",
+    "        Strategy.append(strategy)\n",
+    "        AUROC.append(results['test_auc'])\n",
+    "        AUPRC.append(results['test_aps'])\n",
+    "        AUPRC_rd.append(aps_random)\n",
+    "        Accuracy.append(results['test_accuracy'])\n",
+    "        Precision.append(results['test_precision'])\n",
+    "        Recall.append(results['test_recall'])\n",
+    "        F1.append(results['test_f1_score'])\n",
+    "\n",
+    "classification_table = pd.DataFrame({\"CM\":CM, \"Strategy\":Strategy, \"Accuracy\":Accuracy, \"Precision\":Precision, \"Recall\":Recall, \"F1\":F1, \"AUROC\":AUROC, \"AUPRC\":AUPRC, \"AUPRC_rd\":AUPRC_rd})\n",
+    "classification_table.to_excel(main_folder+\"surgical_outcome_prediction_3sigma_RFC.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gs = classification_table.groupby(\"Strategy\")\n",
+    "for s in strategies:\n",
+    "    print(s)\n",
+    "    print(np.median([e for e in list(gs.get_group(s)[\"AUROC\"]) if e>0.90]))\n",
+    "    print(len([e for e in list(gs.get_group(s)[\"AUROC\"]) if e>0.90]))"
    ]
   }
  ],
