--- a/notebooks/rd_groups_match.ipynb
+++ b/notebooks/rd_groups_match.ipynb
@@ -306,31 +306,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "FONT_SIZE = 13\n",
-    "def prettify_plot(ax):\n",
-    "    ax.tick_params(axis='both', which='major', labelsize=FONT_SIZE)\n",
-    "    ax.legend(loc='best', prop={'size': FONT_SIZE})\n",
-    "    ax.grid(True)\n",
-    "\n",
-    "def roc_prettify_plot(ax, set_title=True):\n",
-    "    prettify_plot(ax)\n",
-    "    ax.set_xlabel(\"False Positive Rate\", fontsize=FONT_SIZE)\n",
-    "    ax.set_ylabel(\"True Positive Rate\", fontsize=FONT_SIZE)\n",
-    "    if set_title:\n",
-    "        ax.set_title(\"ROC-AUC\", fontsize=15)\n",
-    "\n",
-    "def prc_prettify_plot(ax, set_title=True):\n",
-    "    ax.set_ylim(-0.05, 1.05)\n",
-    "    prettify_plot(ax)\n",
-    "    ax.set_xlabel(\"Recall\", fontsize=FONT_SIZE)\n",
-    "    ax.set_ylabel(\"Precision\", fontsize=FONT_SIZE)\n",
-    "    if set_title:\n",
-    "        ax.set_title(\"AUPRC\", fontsize=15)"
+    "Function for computing a moving threshold-based AUC."
    ]
   },
   {
@@ -339,14 +319,147 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import StratifiedKFold, cross_validate, LeaveOneOut, cross_val_score\n",
+    "# function to map all values >=threshold to 1 and all values <threshold to 0\n",
+    "def to_labels(pos_probs, threshold):\n",
+    "\treturn list((pos_probs >= threshold).astype('int')) \n",
+    "\n",
+    "def moving_thresh_auc(predictive_measure=[], outcome=[], moving_step=0.00001):\n",
+    "\n",
+    "    thresholds = np.arange(0, np.max(predictive_measure), moving_step)\n",
+    "\n",
+    "    g = np.array([pm for i,pm in enumerate(predictive_measure) if outcome[i]==\"good\"])\n",
+    "    b = np.array([pm for i,pm in enumerate(predictive_measure) if outcome[i]==\"bad\"])\n",
+    "\n",
+    "    A, A_top = 0, 0\n",
+    "    T = 0\n",
+    "    tp_top, tn_top = 0, 0\n",
+    "    step = 0\n",
+    "    for t in thresholds:    \n",
+    "        g_l, b_l = to_labels(g, t), to_labels(b, t)\n",
+    "        tp = sum(g_l)/14 \n",
+    "        tn = b_l.count(0)/7\n",
+    "        A = (tp + tn)/2\n",
+    "        if A>A_top: \n",
+    "            step=0\n",
+    "            A_top=A\n",
+    "            T=t\n",
+    "            tn_top,tp_top=tn,tp\n",
+    "        elif A==A_top: step+=moving_step\n",
+    "\n",
+    "    return (A_top, T, tn_top, tp_top)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare outcomes using Welch t-test or MannWhitneyU, depending on if the scores are distibuted normally or not, respectively. Plot only the statistically significant differences. Compute AUC using a moving threshold."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from statannot import add_stat_annotation\n",
+    "\n",
+    "from scipy.stats import shapiro\n",
+    "\n",
+    "# Do not print out pyplot outputs\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"last_expr\"\n",
+    "\n",
+    "Sigmas, CM, Strategy, Gauss, Pvalue_Shapiro, Test, Pvalue, MAUC, T, TN, TP = [],[],[],[],[],[],[],[],[],[],[]\n",
+    "\n",
+    "for sigmas in [2,3,4]:\n",
+    "\n",
+    "    load_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma.xlsx\", engine='openpyxl')\n",
+    "\n",
+    "    strategies = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
+    "\n",
+    "    load_data[\"Mean_overlap_ratio\"].fillna(0, inplace=True) # if 0 winners, nan is saved, so replace it with 0\n",
+    "\n",
+    "    for cm in conn_measures:\n",
+    "\n",
+    "        for strategy in strategies:\n",
+    "            data = load_data.groupby(\"CM\").get_group(cm).groupby(\"Strategy\").get_group(strategy)\n",
+    "            # print(data.dtypes)\n",
+    "\n",
+    "            x_plot, y_plot = list(data.Mean_overlap_ratio), [\"good\" if val==1 else \"bad\" for val in data[\"Outcome\"]]\n",
+    "\n",
+    "            # calculate moving threshold-based AUC\n",
+    "            mauc = moving_thresh_auc(x_plot, y_plot, moving_step=0.00001)\n",
+    "\n",
+    "            gaussian, stest = False, ''\n",
+    "            stat, p = shapiro(x_plot)\n",
+    "            if p > 0.05: stest = 'Mann-Whitney'; gaussian = True\n",
+    "            else: stest = 't-test_welch'\n",
+    "\n",
+    "            g = sns.catplot(data=data, x='Outcome', y='Mean_overlap_ratio', order=[1,0], kind=\"box\", hue=\"Outcome\",\n",
+    "                            palette=[\"#FFA7A0\", \"#ABEAC9\"],\n",
+    "                            height=4, aspect=.7);\n",
+    "            g.map_dataframe(sns.stripplot, x='Outcome', y='Mean_overlap_ratio', order=[1,0], hue=\"Outcome\",\n",
+    "                            palette=[\"#404040\",\"#404040\"],\n",
+    "                            alpha=0.6, dodge=True);\n",
+    "\n",
+    "            p_annot = add_stat_annotation(g.axes[0][0], data=data, x=x_plot, y=y_plot, order=[\"good\",\"bad\"],\n",
+    "                            box_pairs=[(\"good\",\"bad\")],\n",
+    "                            test=stest, text_format='star', loc='outside', verbose=0);\n",
+    "            \n",
+    "            pvalue = p_annot[1][0].__dict__[\"pval\"]\n",
+    "            if pvalue<=0.05:\n",
+    "                print(stest)\n",
+    "                plt.title(f\"Sigmas = {sigmas}; Measure = {cm}; Strategy = {strategy}; p-value = {pvalue}; AUC = {mauc[0]}\", pad=50)\n",
+    "                plt.show()\n",
+    "\n",
+    "            plt.close('all')\n",
+    "\n",
+    "            Sigmas.append(sigmas)\n",
+    "            CM.append(cm)\n",
+    "            Strategy.append(strategy)\n",
+    "            Gauss.append(gaussian)\n",
+    "            Pvalue_Shapiro.append(p)\n",
+    "            Test.append(stest)\n",
+    "            Pvalue.append(pvalue)\n",
+    "            MAUC.append(mauc[0])\n",
+    "            T.append(mauc[1])\n",
+    "            TN.append(mauc[2])\n",
+    "            TP.append(mauc[3])\n",
+    "\n",
+    "outcome_mannwhitneyu = pd.DataFrame({\"CM\":CM, \"Strategy\":Strategy, \"Sigmas\":Sigmas,\n",
+    "                                     \"Gauss\":Gauss, \"Pvalue-Shapiro\":Pvalue_Shapiro,\n",
+    "                                     \"Test\":Test, \"Pvalue\":Pvalue,\n",
+    "                                     \"MAUC\":MAUC, \"T\":T, \"TN\":TN, \"TP\":TP})\n",
+    "outcome_mannwhitneyu.to_excel(main_folder+f\"surgical_outcome_prediction.xlsx\")\n",
+    "pass;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try to classify outcomes using Random Forest Classifier (even though the smaple size is too small). Define which data to analyze using *sigmas* parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold, cross_validate\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import average_precision_score, roc_auc_score, make_scorer, accuracy_score, precision_score, recall_score, f1_score\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "load_data = pd.read_excel(main_folder+\"surgical_outcome_data_3sigma.xlsx\", engine='openpyxl')\n",
+    "sigmas = 4\n",
+    "\n",
+    "load_data = pd.read_excel(main_folder+f\"surgical_outcome_data_{sigmas}sigma.xlsx\", engine='openpyxl')\n",
     "\n",
     "strategies = [\"mm\", \"mx\", \"av\", \"rn\"]\n",
     "\n",
@@ -363,9 +476,6 @@
     "        X = data[[\"Mean_overlap_ratio\"]]\n",
     "        y = data[\"Outcome\"]\n",
     "\n",
-    "        # scaler = MinMaxScaler()\n",
-    "        # X = scaler.fit_transform(X)\n",
-    "\n",
     "        scoring = {'accuracy' : make_scorer(accuracy_score), \n",
     "                'precision' : make_scorer(precision_score),\n",
     "                'recall' : make_scorer(recall_score), \n",
@@ -373,8 +483,8 @@
     "                'auc': make_scorer(roc_auc_score),\n",
     "                'aps':make_scorer(average_precision_score)}\n",
     "        \n",
-    "        kfold = StratifiedKFold(n_splits=7, shuffle=True, random_state=0)\n",
-    "        model = RandomForestClassifier(n_estimators=50) \n",
+    "        kfold = StratifiedKFold(n_splits=7, shuffle=True, random_state=1)\n",
+    "        model = RandomForestClassifier(n_estimators=100) \n",
     "        \n",
     "        results = cross_validate(estimator=model,\n",
     "                                X=X,\n",
@@ -398,20 +508,7 @@
     "        F1.append(results['test_f1_score'])\n",
     "\n",
     "classification_table = pd.DataFrame({\"CM\":CM, \"Strategy\":Strategy, \"Accuracy\":Accuracy, \"Precision\":Precision, \"Recall\":Recall, \"F1\":F1, \"AUROC\":AUROC, \"AUPRC\":AUPRC, \"AUPRC_rd\":AUPRC_rd})\n",
-    "classification_table.to_excel(main_folder+\"surgical_outcome_prediction_3sigma_RFC.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gs = classification_table.groupby(\"Strategy\")\n",
-    "for s in strategies:\n",
-    "    print(s)\n",
-    "    print(np.median([e for e in list(gs.get_group(s)[\"AUROC\"]) if e>0.90]))\n",
-    "    print(len([e for e in list(gs.get_group(s)[\"AUROC\"]) if e>0.90]))"
+    "# classification_table.to_excel(main_folder+f\"surgical_outcome_prediction_{sigmas}sigma_RFC.xlsx\")"
    ]
   }
  ],
